# i_like_wasting_time

./: .gitignore  Cargo.toml  job_applications.json  job_applications.json.backup
.cargo/: config.toml
.github/workflows/: release.yml
ilwt_jobsearch/: Cargo.toml
ilwt_jobsearch/src/: lib.rs
src/: data.rs  header.rs  main.rs  message.rs  state.rs  storage.rs  theme.rs  update.rs
src/ui/: common.rs  form.rs  header.rs  job_row.rs  mod.rs
