[package]
name = "i_like_wasting_time"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
iced = { version = "0.13.1", features = ["tokio", "multi-window", "debug"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
svg = "0.18.0"
thiserror = "2.0.12"
webbrowser = "1.0.4"
#chrono = "0.4"

