[package]
name = "ilwt_jobsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["rustls-tls", "json"] }
regex = "1.11.1"
